--- a/employees.html
+++ b/employees.html
@@ -25,7 +25,7 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>О нас</title>
+	<title>Сотрудники</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
@@ -44,7 +44,11 @@
 </g></symbol><symbol id="close" viewBox="0 0 20 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M19.7071 0.292893C20.0976 0.683417 20.0976 1.31658 19.7071 1.70711L1.70711 19.7071C1.31658 20.0976 0.683417 20.0976 0.292893 19.7071C-0.0976311 19.3166 -0.0976311 18.6834 0.292893 18.2929L18.2929 0.292893C18.6834 -0.0976311 19.3166 -0.0976311 19.7071 0.292893Z" fill="#1F2F43"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L19.7071 18.2929C20.0976 18.6834 20.0976 19.3166 19.7071 19.7071C19.3166 20.0976 18.6834 20.0976 18.2929 19.7071L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893Z" fill="#1F2F43"/>
-</g></symbol><symbol id="line" viewBox="0 0 10 3"><g fill="none">
+</g></symbol><symbol id="danger" viewBox="0 0 28 25">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M14 9.00037C14.5523 9.00037 15 9.44808 15 10.0004V15.0004C15 15.5527 14.5523 16.0004 14 16.0004C13.4477 16.0004 13 15.5527 13 15.0004V10.0004C13 9.44808 13.4477 9.00037 14 9.00037Z"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M12.5011 0.4031C12.9564 0.139059 13.4734 0 13.9998 0C14.5261 0 15.0431 0.139059 15.4985 0.4031C15.953 0.666694 16.33 1.04551 16.5914 1.5013L16.5927 1.50362L27.5908 20.5003C27.8537 20.9556 27.9923 21.472 27.9927 21.9977C27.9932 22.5234 27.8555 23.04 27.5935 23.4957C27.3314 23.9515 26.9542 24.3304 26.4996 24.5944C26.045 24.8585 25.529 24.9985 25.0033 25.0003L24.9998 25.0003H2.99979L2.99627 25.0003C2.47056 24.9985 1.95456 24.8585 1.49997 24.5944C1.04539 24.3304 0.668171 23.9515 0.406117 23.4957C0.144063 23.04 0.00637136 22.5234 0.00683712 21.9977C0.00730281 21.472 0.145909 20.9556 0.408771 20.5003L11.4069 1.50362L11.4082 1.5013C11.6696 1.04551 12.0466 0.666694 12.5011 0.4031ZM12.2748 2.00032L13.1402 2.50135L2.14081 21.5003C2.05334 21.652 2.00699 21.8244 2.00684 21.9994C2.00668 22.1747 2.05258 22.3469 2.13993 22.4988C2.22728 22.6507 2.35302 22.777 2.50455 22.865C2.65568 22.9528 2.82718 22.9995 3.00195 23.0003H24.9976C25.1724 22.9995 25.3439 22.9528 25.495 22.865C25.6466 22.777 25.7723 22.6507 25.8597 22.4988C25.947 22.3469 25.9929 22.1747 25.9927 21.9994C25.9926 21.8244 25.9465 21.6525 25.8591 21.5009L14.8569 2.49702C14.7704 2.34602 14.6457 2.22052 14.4952 2.13324C14.3447 2.04597 14.1738 2 13.9998 2C13.8258 2 13.6549 2.04597 13.5044 2.13324C13.3539 2.22052 13.2291 2.34601 13.1427 2.49701L12.2748 2.00032Z"/>
+<path d="M14 21.0004C14.8284 21.0004 15.5 20.3288 15.5 19.5004C15.5 18.6719 14.8284 18.0004 14 18.0004C13.1716 18.0004 12.5 18.6719 12.5 19.5004C12.5 20.3288 13.1716 21.0004 14 21.0004Z"/>
+</symbol><symbol id="line" viewBox="0 0 10 3"><g fill="none">
 <path d="M9.968 0.279999V2.128H0.392V0.279999H9.968Z" fill="#1F2F43"/>
 </g></symbol><symbol id="success" viewBox="0 0 22 22"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0566 8.00166C16.3664 8.32634 16.3543 8.84064 16.0296 9.15039L10.0679 14.8379C9.75376 15.1376 9.25955 15.1373 8.94569 14.8374L5.96991 11.9937C5.64549 11.6836 5.63382 11.1693 5.94384 10.8449C6.25387 10.5205 6.76818 10.5088 7.0926 10.8188L9.50751 13.1266L14.9079 7.97462C15.2326 7.66487 15.7469 7.67698 16.0566 8.00166Z" fill="#3DC03C"/>
@@ -89,11 +93,42 @@
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="./index.html">Главная</a>
-			<a class="swiper-slide" href="#">Условия</a>
+			<details class="swiper-slide nav-link-dropdown">
+				<summary class="nav-dropdown">
+					Условия
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</summary>
+
+			</details>
 			<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 			<a class="swiper-slide" href="./faq.html">FAQ</a>
 		</div>
 	</div>
+
+	<div class="dropdown-menu">
+
+		<ul class="dropdown">
+			<li class="dropdown-item">
+				<a href="./not-accepted.html" class="nav-link">Не принимаются</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./delivery.html" class="nav-link">Условия доставки</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./dangerous-goods.html" class="nav-link">Опасные грузы</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./duty.html" class="nav-link">Товары подлежащие вывозной пошлине </a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./offer.html" class="nav-link">Оферта</a>
+			</li>
+		</ul>
+
+	</div>
+
 
 	<div class="container">
 
