--- a/not-accepted.html
+++ b/not-accepted.html
@@ -1,6 +1,10 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
+
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -21,14 +25,13 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>Главная</title>
+	<title>Не принимаются</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
-
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
+ <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
 <path clip-rule="evenodd" d="M0.96967 0.46967C1.26256 0.176777 1.73744 0.176777 2.03033 0.46967L9 7.43934L15.9697 0.46967C16.2626 0.176777 16.7374 0.176777 17.0303 0.46967C17.3232 0.762563 17.3232 1.23744 17.0303 1.53033L9.53033 9.03033C9.23744 9.32322 8.76256 9.32322 8.46967 9.03033L0.96967 1.53033C0.676777 1.23744 0.676777 0.762563 0.96967 0.46967Z"/>
 </symbol><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.49012e-08 10C1.49012e-08 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 1.49012e-08 10.5523 1.49012e-08 10Z" fill="black"/>
@@ -58,43 +61,34 @@
 <path d="M18.5698 4.91604C15.7681 0.18837 9.64193 -1.37825 4.91518 1.42401C0.284336 4.1687 -1.31267 10.1042 1.25789 14.7896L0.445476 17.6591C0.363947 17.9392 0.363947 18.2347 0.445476 18.5148C0.68143 19.3226 1.53029 19.7869 2.33119 19.5528L5.2058 18.7383C6.69826 19.5566 8.34706 19.9663 9.99586 19.9663C11.7531 19.9663 13.5102 19.502 15.0775 18.5724C17.367 17.2149 18.9919 15.0468 19.6508 12.4671C20.3107 9.88738 19.9261 7.206 18.5689 4.91508L18.5698 4.91604ZM18.1651 12.0872C17.6068 14.2697 16.2333 16.104 14.2958 17.2523C11.6447 18.8237 8.34994 18.8237 5.69785 17.2523C5.57796 17.1813 5.44272 17.1448 5.30651 17.1448C5.2365 17.1448 5.16648 17.1544 5.09742 17.1736L1.92355 18.0725L2.82228 14.8981C2.87983 14.6956 2.85106 14.4788 2.74363 14.2975C0.373538 10.298 1.69814 5.11462 5.69785 2.74407C9.6966 0.373524 14.879 1.69838 17.2491 5.69886C18.3972 7.63675 18.7223 9.90561 18.1641 12.0872H18.1651Z" fill="white"/>
 <path d="M15.0363 11.431L13.0767 10.3076C12.5971 10.038 12.0053 10.0457 11.5305 10.3277L10.3882 11.0117C9.80403 10.675 9.31965 10.1905 8.98299 9.60629L9.66783 8.46179C9.94887 7.98883 9.95558 7.39691 9.68318 6.91052L8.56287 4.95729C8.30966 4.50544 7.83007 4.22627 7.3198 4.23202C5.42257 4.23202 3.87353 5.77561 3.86681 7.6732V7.71637C3.87257 9.96892 4.755 12.0843 6.35104 13.673C7.9423 15.2568 10.0534 16.1279 12.2969 16.1279C12.3055 16.1279 12.3142 16.1279 12.3218 16.1279C14.2104 16.1145 15.7528 14.5661 15.7595 12.68C15.7633 12.162 15.4861 11.6842 15.0343 11.431H15.0363ZM12.3142 14.593H12.2988C10.463 14.593 8.73648 13.8802 7.4349 12.5851C6.12948 11.2851 5.40723 9.55544 5.40243 7.71158V7.67896C5.40627 6.6467 6.23115 5.80343 7.26033 5.76794L8.34994 7.66745L8.3509 7.67512L7.44929 9.1813C7.32076 9.39619 7.30445 9.66097 7.40804 9.89026C7.94709 11.0904 8.9053 12.0478 10.1052 12.5879C10.3345 12.6906 10.5992 12.6752 10.814 12.5467L12.3209 11.643L14.2267 12.7357C14.1893 13.7583 13.3453 14.5853 12.3151 14.5939L12.3142 14.593Z" fill="white"/>
 </g></symbol></svg>
+</head>
 
 <body>
-	<div class="container"><header>
+	<div class="container">
+		<header>
+			<nav class="about-nav">
+				<button id="go-back" class="nav-back">
+					<svg width="24" height="20">
+						<use xlink:href="#arrow-left"></use>
+					</svg>
+				</button>
 
-	<nav>
-		<div class="nav__logo">
-			<a href="./profile.html">
-				<picture>
-					<source srcset="./images/index/avtr.avif">
-					<img src="./images/index/avtr.png" alt="avatar" width="43" height="43">
-				</picture>
-				<span>userName</span>
-			</a>
-		</div>
+				<div class="nav__links">
+					<a href="tel:+998555031199" class="nav__phone">
+						<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
+						</svg>
+					</a>
 
-		<div class="nav__links">
-			<a href="tel:+998555031199" class="nav__phone">
-				<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
-				</svg>
-			</a>
-
-			<a href="#" class="nav__bot">@yumecs</a>
-		</div>
-	</nav>
-
-</header>
-</div>
+					<a href="#" class="nav__bot">@yumecs</a>
+				</div>
+			</nav>
+		</header>
+	</div>
 
 	<div class="links-container swiper-container">
-		<div class="swiper-wrapper page-links">
-			<a class="swiper-slide active" href="./index.html">Главная</a>
-			<a class="swiper-slide" href="./about.html">О нас</a>
-			<a class="swiper-slide" href="./servises.html">Услуги</a>
-			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-
-			<details class="swiper-slide nav-link-dropdown">
+		<div class="page-links swiper-wrapper">
+			<details class="swiper-slide active nav-link-dropdown">
 				<summary class="nav-dropdown">
 					Условия
 					<svg width="17" height="9">
@@ -103,6 +97,11 @@
 				</summary>
 
 			</details>
+			<span class="page-link">Не принимаются</span>
+			<a class="swiper-slide" href="./about.html">О нас</a>
+			<a class="swiper-slide" href="./index.html">Главная</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
+			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 
 			<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 			<a class="swiper-slide" href="./faq.html">FAQ</a>
@@ -132,204 +131,100 @@
 
 	</div>
 
+
 	<div class="container">
+		<section class="not-accepted" data-accordion>
 
-		<section class="points">
-
-	<a href="./profile.html" class="points-count points-col1">
-		<b>баллы</b>
-		<svg width="9" height="17">
-			<use xlink:href="#arrow-small"></use>
-		</svg>
-		<span>0</span>
-	</a>
-
-	<a href="#" class="choise">
-		<h1>Выбирай и заказывай сейчас</h1>
-		<span>
-			<svg width="24" height="20">
-				<use xlink:href="#arrow-right"></use>
-			</svg>
-		</span>
-	</a>
-
-	<a href="#" class="points-count points-col2">
-		<b>Зови Друзей</b>
-		<svg width="9" height="17">
-			<use xlink:href="#arrow-small"></use>
-		</svg>
-		<p>Набирай баллы с помощью друзей</p>
-	</a>
-
-</section>
-
-		<a href="./tarifs.html#calculation" class="calculation">
-	<p>рассчитать стоимость товара</p>
-	<svg width="9" height="17">
-		<use xlink:href="#arrow-small"></use>
-	</svg>
-</a>
-
-		<section class="slider swiper">
-
-	<div class="pagination">
-		<span class="swiper-pagination-bullet"></span>
-		<span class="swiper-pagination-bullet"></span>
-		<span class="swiper-pagination-bullet"></span>
-		<span class="swiper-pagination-bullet"></span>
-	</div>
-
-	<div class="swiper-wrapper slider__wrapper">
-		<div class="swiper-slide slider__img">
-			<picture>
-				<source srcset="./images/advert1.avif">
-				<img src="./images/advert1.jpg" alt="advert" width="400" height="300">
-			</picture>
-		</div>
-		<div class="swiper-slide slider__img">
-			<picture>
-				<source srcset="./images/advert2.avif">
-				<img src="./images/advert2.jpg" alt="advert" width="400" height="300">
-			</picture>
-		</div>
-		<div class="swiper-slide slider__img">
-			<picture>
-				<source srcset="./images/advert1.avif">
-				<img src="./images/advert1.jpg" alt="advert" width="400" height="300">
-			</picture>
-		</div>
-		<div class="swiper-slide slider__img">
-			<picture>
-				<source srcset="./images/advert2.avif">
-				<img src="./images/advert2.jpg" alt="advert" width="400" height="300">
-			</picture>
-		</div>
-	</div>
-
-</section>
-
-		<section class="tabs">
-	<div class="tabs__links">
-		<button class="active tabs__link" data-tab="order">Активные</button>
-		<button class="tabs__link" data-tab="history">история</button>
-		<span class="tabs__bg"></span>
-	</div>
-
-	<div class="active tabs__about" data-tab-content="order">
-		<h3>Заказ</h3>
-		<div class="tabs__about-head">
-			<div class="tabs__about-id">
-				<b>Id заказа</b>
+			<div class="not-accepted-accordeon servises-accordeon" data-accordion-header>
+				<h3>Выкуп из России</h3>
 				<svg width="17" height="9">
 					<use xlink:href="#accordeon"></use>
 				</svg>
 			</div>
-			<div class="tabs__about-id">
-				<b id="productId">#999993</b>
-				<span>Китай</span>
-			</div>
 
-			<div class="tabs__about-wrapper">
-				<div class="tabs__about-info">
-					<div class="point-decor"></div>
-					<b>Принят на Склад</b>
-					<span>12 Марта</span>
+			<div class="servises-wrapper" data-accordion-content>
+				<div class="not-accepted-card">
+					<svg width="28" height="25">
+						<use xlink:href="#danger"></use>
+					</svg>
+					<p>Книги религиозного и порнографического характера,
+						не соответствующие нормам перевозки в РУзб.
+					</p>
 				</div>
-				<div class="tabs__about-info">
-					<div class="point-decor"></div>
-					<b>Упакован и Оформлен</b>
-					<span>12 Марта</span>
+
+				<div class="not-accepted-card">
+					<svg width="28" height="25">
+						<use xlink:href="#danger"></use>
+					</svg>
+					<p>
+						Интимные игрушки
+					</p>
 				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>Отправлен</b>
-					<span>12 Марта</span>
-				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>В Пути</b>
-					<span>12 Марта</span>
-				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>На Таможне</b>
-					<span>12 Марта</span>
-				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>Статус Оплачен</b>
-					<span>12 Марта</span>
-				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>Готов к выдаче!</b>
-					<span>12 Марта</span>
-				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>На Доставке</b>
-					<span>12 Марта</span>
-				</div>
-				<div class="tabs__about-info in-active">
-					<div class="point-decor"></div>
-					<b>Доставлен</b>
-					<span>12 Марта</span>
+
+				<div class="not-accepted-card">
+					<svg width="28" height="25">
+						<use xlink:href="#danger"></use>
+					</svg>
+					<p>
+						Продукты, содержащие спирт
+					</p>
 				</div>
 			</div>
-		</div>
-	</div>
 
-	<div class="tabs__about" data-tab-content="history">
-		<h3>Ваши заказы</h3>
+		</section>
 
-		<div class="tabs__about-history">
-			<div class="tabs__about-history-head">
-				<p>номер заказа</p>
-				<span>Статус</span>
-			</div>
-			<div class="tabs__about-history-bottom">
-				<b>#999993</b>
-				<span>Доставлен</span>
-			</div>
-		</div>
+		<section class="not-accepted" data-accordion>
 
-		<div class="tabs__about-history">
-			<div class="tabs__about-history-head">
-				<p>номер заказа</p>
-				<span>Статус</span>
+			<div class="not-accepted-accordeon servises-accordeon" data-accordion-header>
+				<h3>Выкуп из России</h3>
+				<svg width="17" height="9">
+					<use xlink:href="#accordeon"></use>
+				</svg>
 			</div>
-			<div class="tabs__about-history-bottom">
-				<b>#999993</b>
-				<span class="cansel">Доставлен</span>
-			</div>
-		</div>
 
-		<div class="tabs__about-history">
-			<div class="tabs__about-history-head">
-				<p>номер заказа</p>
-				<span>Статус</span>
+			<div class="servises-wrapper" data-accordion-content>
+				<p>Благодаря развитию новых технологий мир становится более открытым, в том числе в области почтовых
+					отправлений. Однако эта тенденция не исключает меры безопасности, о которых необходимо помнить,
+					собираясь отправить посылку адресатам.
+				</p>
+				<p>
+					Власти разработали перечень предметов и веществ, запрещенных к доставке по почте. Списки отличаются
+					в зависимости от географии пересылки: внутри страны или в другое государство.
+				</p>
+				<p>
+					В нашей стране к пересылке при помощи почтовых отправлений запрещены следующие виды предметов и
+					изделий:
+				</p>
+				<p>
+					оружие: в том числе огнестрельное, сигнальные и пневматические пистолеты. Нельзя пересылать
+					боеприпасы, пистолеты и автоматы в разобранном состоянии, а также электрошоковые агрегаты;
+				</p>
 			</div>
-			<div class="tabs__about-history-bottom">
-				<b>#999993</b>
-				<span>Доставлен</span>
+
+		</section>
+
+		<section class="not-accepted" data-accordion>
+
+			<div class="not-accepted-accordeon servises-accordeon" data-accordion-header>
+				<h3>Правила международной пересылки</h3>
+				<svg width="17" height="9">
+					<use xlink:href="#accordeon"></use>
+				</svg>
 			</div>
-		</div>
 
-		<div class="tabs__about-history">
-			<div class="tabs__about-history-head">
-				<p>номер заказа</p>
-				<span>Статус</span>
+			<div class="servises-wrapper" data-accordion-content>
+				<p>Список, касающийся предметов, запрещенных к переправке почтой за границу, гораздо шире. В него также
+					входят оружие, наркотики и опасные вещества, газы, а также валюта, кроме того, нельзя отправлять
+					почтой:
+				</p>
+				<p>
+					документы – паспорта, удостоверения, трудовые договоры и книжки. Исключение составляют копии этих
+					документов, заверенные нотариусом;
+					облигации, лотерейные билеты и ценные бумаги;
+				</p>
 			</div>
-			<div class="tabs__about-history-bottom">
-				<b>#999993</b>
-				<span>Доставлен</span>
-			</div>
-		</div>
 
-	</div>
-</section>
-
-
+		</section>
 	</div>
 
 	<script type="module" src="./js/main.min.js"></script>
