--- a/shop.html
+++ b/shop.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -43,7 +44,11 @@
 </g></symbol><symbol id="close" viewBox="0 0 20 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M19.7071 0.292893C20.0976 0.683417 20.0976 1.31658 19.7071 1.70711L1.70711 19.7071C1.31658 20.0976 0.683417 20.0976 0.292893 19.7071C-0.0976311 19.3166 -0.0976311 18.6834 0.292893 18.2929L18.2929 0.292893C18.6834 -0.0976311 19.3166 -0.0976311 19.7071 0.292893Z" fill="#1F2F43"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L19.7071 18.2929C20.0976 18.6834 20.0976 19.3166 19.7071 19.7071C19.3166 20.0976 18.6834 20.0976 18.2929 19.7071L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893Z" fill="#1F2F43"/>
-</g></symbol><symbol id="line" viewBox="0 0 10 3"><g fill="none">
+</g></symbol><symbol id="danger" viewBox="0 0 28 25">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M14 9.00037C14.5523 9.00037 15 9.44808 15 10.0004V15.0004C15 15.5527 14.5523 16.0004 14 16.0004C13.4477 16.0004 13 15.5527 13 15.0004V10.0004C13 9.44808 13.4477 9.00037 14 9.00037Z"/>
+<path fill-rule="evenodd" clip-rule="evenodd" d="M12.5011 0.4031C12.9564 0.139059 13.4734 0 13.9998 0C14.5261 0 15.0431 0.139059 15.4985 0.4031C15.953 0.666694 16.33 1.04551 16.5914 1.5013L16.5927 1.50362L27.5908 20.5003C27.8537 20.9556 27.9923 21.472 27.9927 21.9977C27.9932 22.5234 27.8555 23.04 27.5935 23.4957C27.3314 23.9515 26.9542 24.3304 26.4996 24.5944C26.045 24.8585 25.529 24.9985 25.0033 25.0003L24.9998 25.0003H2.99979L2.99627 25.0003C2.47056 24.9985 1.95456 24.8585 1.49997 24.5944C1.04539 24.3304 0.668171 23.9515 0.406117 23.4957C0.144063 23.04 0.00637136 22.5234 0.00683712 21.9977C0.00730281 21.472 0.145909 20.9556 0.408771 20.5003L11.4069 1.50362L11.4082 1.5013C11.6696 1.04551 12.0466 0.666694 12.5011 0.4031ZM12.2748 2.00032L13.1402 2.50135L2.14081 21.5003C2.05334 21.652 2.00699 21.8244 2.00684 21.9994C2.00668 22.1747 2.05258 22.3469 2.13993 22.4988C2.22728 22.6507 2.35302 22.777 2.50455 22.865C2.65568 22.9528 2.82718 22.9995 3.00195 23.0003H24.9976C25.1724 22.9995 25.3439 22.9528 25.495 22.865C25.6466 22.777 25.7723 22.6507 25.8597 22.4988C25.947 22.3469 25.9929 22.1747 25.9927 21.9994C25.9926 21.8244 25.9465 21.6525 25.8591 21.5009L14.8569 2.49702C14.7704 2.34602 14.6457 2.22052 14.4952 2.13324C14.3447 2.04597 14.1738 2 13.9998 2C13.8258 2 13.6549 2.04597 13.5044 2.13324C13.3539 2.22052 13.2291 2.34601 13.1427 2.49701L12.2748 2.00032Z"/>
+<path d="M14 21.0004C14.8284 21.0004 15.5 20.3288 15.5 19.5004C15.5 18.6719 14.8284 18.0004 14 18.0004C13.1716 18.0004 12.5 18.6719 12.5 19.5004C12.5 20.3288 13.1716 21.0004 14 21.0004Z"/>
+</symbol><symbol id="line" viewBox="0 0 10 3"><g fill="none">
 <path d="M9.968 0.279999V2.128H0.392V0.279999H9.968Z" fill="#1F2F43"/>
 </g></symbol><symbol id="success" viewBox="0 0 22 22"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0566 8.00166C16.3664 8.32634 16.3543 8.84064 16.0296 9.15039L10.0679 14.8379C9.75376 15.1376 9.25955 15.1373 8.94569 14.8374L5.96991 11.9937C5.64549 11.6836 5.63382 11.1693 5.94384 10.8449C6.25387 10.5205 6.76818 10.5088 7.0926 10.8188L9.50751 13.1266L14.9079 7.97462C15.2326 7.66487 15.7469 7.67698 16.0566 8.00166Z" fill="#3DC03C"/>
@@ -56,160 +61,191 @@
 <path d="M18.5698 4.91604C15.7681 0.18837 9.64193 -1.37825 4.91518 1.42401C0.284336 4.1687 -1.31267 10.1042 1.25789 14.7896L0.445476 17.6591C0.363947 17.9392 0.363947 18.2347 0.445476 18.5148C0.68143 19.3226 1.53029 19.7869 2.33119 19.5528L5.2058 18.7383C6.69826 19.5566 8.34706 19.9663 9.99586 19.9663C11.7531 19.9663 13.5102 19.502 15.0775 18.5724C17.367 17.2149 18.9919 15.0468 19.6508 12.4671C20.3107 9.88738 19.9261 7.206 18.5689 4.91508L18.5698 4.91604ZM18.1651 12.0872C17.6068 14.2697 16.2333 16.104 14.2958 17.2523C11.6447 18.8237 8.34994 18.8237 5.69785 17.2523C5.57796 17.1813 5.44272 17.1448 5.30651 17.1448C5.2365 17.1448 5.16648 17.1544 5.09742 17.1736L1.92355 18.0725L2.82228 14.8981C2.87983 14.6956 2.85106 14.4788 2.74363 14.2975C0.373538 10.298 1.69814 5.11462 5.69785 2.74407C9.6966 0.373524 14.879 1.69838 17.2491 5.69886C18.3972 7.63675 18.7223 9.90561 18.1641 12.0872H18.1651Z" fill="white"/>
 <path d="M15.0363 11.431L13.0767 10.3076C12.5971 10.038 12.0053 10.0457 11.5305 10.3277L10.3882 11.0117C9.80403 10.675 9.31965 10.1905 8.98299 9.60629L9.66783 8.46179C9.94887 7.98883 9.95558 7.39691 9.68318 6.91052L8.56287 4.95729C8.30966 4.50544 7.83007 4.22627 7.3198 4.23202C5.42257 4.23202 3.87353 5.77561 3.86681 7.6732V7.71637C3.87257 9.96892 4.755 12.0843 6.35104 13.673C7.9423 15.2568 10.0534 16.1279 12.2969 16.1279C12.3055 16.1279 12.3142 16.1279 12.3218 16.1279C14.2104 16.1145 15.7528 14.5661 15.7595 12.68C15.7633 12.162 15.4861 11.6842 15.0343 11.431H15.0363ZM12.3142 14.593H12.2988C10.463 14.593 8.73648 13.8802 7.4349 12.5851C6.12948 11.2851 5.40723 9.55544 5.40243 7.71158V7.67896C5.40627 6.6467 6.23115 5.80343 7.26033 5.76794L8.34994 7.66745L8.3509 7.67512L7.44929 9.1813C7.32076 9.39619 7.30445 9.66097 7.40804 9.89026C7.94709 11.0904 8.9053 12.0478 10.1052 12.5879C10.3345 12.6906 10.5992 12.6752 10.814 12.5467L12.3209 11.643L14.2267 12.7357C14.1893 13.7583 13.3453 14.5853 12.3151 14.5939L12.3142 14.593Z" fill="white"/>
 </g></symbol></svg>
-	</head>
+</head>
 
-	<body>
-		<div class="container">
-			<header>
-				<nav class="about-nav">
-					<button id="go-back" class="nav-back">
-						<svg width="24" height="20">
-							<use xlink:href="#arrow-left"></use>
+<body>
+	<div class="container">
+		<header>
+			<nav class="about-nav">
+				<button id="go-back" class="nav-back">
+					<svg width="24" height="20">
+						<use xlink:href="#arrow-left"></use>
+					</svg>
+				</button>
+
+				<div class="nav__links">
+					<a href="tel:+998555031199" class="nav__phone">
+						<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
 						</svg>
-					</button>
+					</a>
 
-					<div class="nav__links">
-						<a href="tel:+998555031199" class="nav__phone">
-							<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
-							</svg>
-						</a>
-
-						<a href="#" class="nav__bot">@yumecs</a>
-					</div>
-				</nav>
-			</header>
-		</div>
-
-		<div class="links-container swiper-container">
-			<div class="page-links swiper-wrapper">
-				<a class="swiper-slide active" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-				<a class="swiper-slide" href="./servises.html">Услуги</a>
-				<a class="swiper-slide" href="./about.html">О нас</a>
-				<a class="swiper-slide" href="./index.html">Главная</a>
-				<a class="swiper-slide" href="#">Условия</a>
-				<a class="swiper-slide" href="./faq.html">FAQ</a>
-				<a class="swiper-slide" href="./employees.html">Сотрудники</a>
-			</div>
-		</div>
-
-		<div class="container">
-			<section class="shop">
-				<h1>Бренды</h1>
-				<div class="shop-content">
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop1.avif">
-							<img src="./images/shop1.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop2.avif">
-							<img src="./images/shop2.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop3.avif">
-							<img src="./images/shop3.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop4.avif">
-							<img src="./images/shop4.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop5.avif">
-							<img src="./images/shop5.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop6.avif">
-							<img src="./images/shop6.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop7.avif">
-							<img src="./images/shop7.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop8.avif">
-							<img src="./images/shop8.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop9.avif">
-							<img src="./images/shop9.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop1.avif">
-							<img src="./images/shop1.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop2.avif">
-							<img src="./images/shop2.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop3.avif">
-							<img src="./images/shop3.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop4.avif">
-							<img src="./images/shop4.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop5.avif">
-							<img src="./images/shop5.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop6.avif">
-							<img src="./images/shop6.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop7.avif">
-							<img src="./images/shop7.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop8.avif">
-							<img src="./images/shop8.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop9.avif">
-							<img src="./images/shop9.png" alt="shop" width="100" height="100">
-						</picture>
-					</a>
+					<a href="#" class="nav__bot">@yumecs</a>
 				</div>
-			</section>
-		</div>
+			</nav>
+		</header>
+	</div>
 
-		<script type="module" src="./js/main.min.js"></script>
-	</body>
+	<div class="links-container swiper-container">
+		<div class="page-links swiper-wrapper">
+			<a class="swiper-slide active" href="./shop.html">Интернет магазины</a>
+			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
+			<a class="swiper-slide" href="./about.html">О нас</a>
+			<a class="swiper-slide" href="./index.html">Главная</a>
+			<details class="swiper-slide nav-link-dropdown">
+				<summary class="nav-dropdown">
+					Условия
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</summary>
+			</details>
+
+			<a class="swiper-slide" href="./faq.html">FAQ</a>
+			<a class="swiper-slide" href="./employees.html">Сотрудники</a>
+		</div>
+	</div>
+
+	<div class="dropdown-menu">
+
+		<ul class="dropdown">
+			<li class="dropdown-item">
+				<a href="./not-accepted.html" class="nav-link">Не принимаются</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./delivery.html" class="nav-link">Условия доставки</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./dangerous-goods.html" class="nav-link">Опасные грузы</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./duty.html" class="nav-link">Товары подлежащие вывозной пошлине </a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./offer.html" class="nav-link">Оферта</a>
+			</li>
+		</ul>
+
+	</div>
+
+	<div class="container">
+		<section class="shop">
+			<h1>Бренды</h1>
+			<div class="shop-content">
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop1.avif">
+						<img src="./images/shop1.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop2.avif">
+						<img src="./images/shop2.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop3.avif">
+						<img src="./images/shop3.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop4.avif">
+						<img src="./images/shop4.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop5.avif">
+						<img src="./images/shop5.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop6.avif">
+						<img src="./images/shop6.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop7.avif">
+						<img src="./images/shop7.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop8.avif">
+						<img src="./images/shop8.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop9.avif">
+						<img src="./images/shop9.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop1.avif">
+						<img src="./images/shop1.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop2.avif">
+						<img src="./images/shop2.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop3.avif">
+						<img src="./images/shop3.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop4.avif">
+						<img src="./images/shop4.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop5.avif">
+						<img src="./images/shop5.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop6.avif">
+						<img src="./images/shop6.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop7.avif">
+						<img src="./images/shop7.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop8.avif">
+						<img src="./images/shop8.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop9.avif">
+						<img src="./images/shop9.png" alt="shop" width="100" height="100">
+					</picture>
+				</a>
+			</div>
+		</section>
+	</div>
+
+	<script type="module" src="./js/main.min.js"></script>
+</body>
+
 </html>
