--- a/src/html/pages/tarifs-inner.html
+++ b/src/html/pages/tarifs-inner.html
@@ -34,8 +34,8 @@
 
 	<div class="swiper-container links-container">
 		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-			<a class="swiper-slide active" href="./about.html">О нас</a>
+			<a class="swiper-slide active" href="./tarifs.html">Тарифы</a>
+			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="./index.html">Главная</a>
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<details class="nav-link-dropdown swiper-slide">
