--- a/tarifs-inner.html
+++ b/tarifs-inner.html
@@ -88,8 +88,8 @@
 
 	<div class="links-container swiper-container">
 		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-			<a class="swiper-slide active" href="./about.html">О нас</a>
+			<a class="swiper-slide active" href="./tarifs.html">Тарифы</a>
+			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="./index.html">Главная</a>
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<details class="swiper-slide nav-link-dropdown">
