fix: fix styles and add link to bot

--- a/src/html/pages/tarifs.html
+++ b/src/html/pages/tarifs.html
@@ -24,7 +24,7 @@
 						</svg>
 					</a>
 
-					<a href="#" class="nav__bot">@yumecs</a>
+					<a href="https://t.me/yumecs"class="nav__bot">@yumecs</a>
 				</div>
 
 			</nav>
@@ -89,7 +89,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -99,7 +99,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -109,7 +109,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -119,7 +119,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -129,7 +129,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -139,7 +139,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 		</section>
 
