--- a/tarifs.html
+++ b/tarifs.html
@@ -78,7 +78,7 @@
 						</svg>
 					</a>
 
-					<a href="#" class="nav__bot">@yumecs</a>
+					<a href="https://t.me/yumecs" class="nav__bot">@yumecs</a>
 				</div>
 
 			</nav>
@@ -143,7 +143,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -153,7 +153,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -163,7 +163,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -173,7 +173,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -183,7 +183,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 			<div class="tarifs__about">
 				<div class="tarifs__about-wrapper">
@@ -193,7 +193,7 @@
 					</svg>
 					<p>Узбекистан</p>
 				</div>
-				<a href="/tarifs-inner.html">подробнее</a>
+				<a href="./tarifs-inner.html">подробнее</a>
 			</div>
 		</section>
 
