--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</svg>
 			</a>
 
-			<a href="#" class="nav__bot">@yumecs</a>
+			<a href="https://t.me/yumecs" class="nav__bot">@yumecs</a>
 		</div>
 	</nav>
 
