--- a/servises.html
+++ b/servises.html
@@ -75,7 +75,7 @@
 						</svg>
 					</a>
 
-					<a href="#" class="nav__bot">@yumecs</a>
+					<a href="https://t.me/yumecs" class="nav__bot">@yumecs</a>
 				</div>
 			</nav>
 		</header>
