--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
 				</svg>
 			</a>
 
-			<a href="tg://join?invite=yumecs" class="nav__bot">@yumecs</a>
+			<a href="https://t.me/yumecs?choose=groups+channels" class="nav__bot">@yumecs</a>
 		</div>
 	</nav>
 
 </header>
+
 </div>
 
 	<div class="links-container swiper-container">
