test: try to create link to number on ios

--- a/src/html/pages/not-accepted.html
+++ b/src/html/pages/not-accepted.html
@@ -175,6 +175,9 @@
 		</section>
 	</div>
 
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
