--- a/src/html/pages/tarifs.html
+++ b/src/html/pages/tarifs.html
@@ -180,6 +180,11 @@
 
 	</div>
 
+
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
+
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
