--- a/src/html/pages/dangerous-goods.html
+++ b/src/html/pages/dangerous-goods.html
@@ -243,6 +243,9 @@
 
 	</div>
 
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
