--- a/src/html/pages/delivery.html
+++ b/src/html/pages/delivery.html
@@ -150,6 +150,9 @@
 
 	</div>
 
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
