--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -60,6 +60,20 @@
 
 	</div>
 
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+
+		document.getElementById('.nav__phone').addEventListener('click', function () {
+			const a = document.createElement('a');
+			a.href = 'tel:+998555031199';
+			a.style.display = 'none';
+			document.body.appendChild(a);
+			a.click();
+			document.body.removeChild(a);
+		});
+
+	</script>
+
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
