--- a/src/html/pages/profile.html
+++ b/src/html/pages/profile.html
@@ -101,11 +101,10 @@
 	</div>
 
 
-	<div class="container">
 
-
-
-	</div>
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
 
 	<script type="module" src="./js/main.min.js"></script>
 </body>
