--- a/src/html/pages/shop.html
+++ b/src/html/pages/shop.html
@@ -193,6 +193,11 @@
 		</section>
 	</div>
 
+
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
+
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
