--- a/dangerous-goods.html
+++ b/dangerous-goods.html
@@ -297,6 +297,9 @@
 
 	</div>
 
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
