--- a/shop.html
+++ b/shop.html
@@ -247,6 +247,11 @@
 		</section>
 	</div>
 
+
+	<script>
+		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+	</script>
+
 	<script type="module" src="./js/main.min.js"></script>
 </body>
 
