fix: fix slider links

--- a/src/html/pages/dangerous-goods.html
+++ b/src/html/pages/dangerous-goods.html
@@ -19,7 +19,7 @@
 
 				<div class="nav__links">
 
-					<a href="tel:+998555031199" class="nav__phone">
+					<a onclick="window.open('tel:998555031199')" class="nav__phone">
 
 						<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path
@@ -45,7 +45,7 @@
 				</summary>
 
 			</details>
-			<span class="page-link">опасные грузы</span>
+			<span class="page-link swiper-slide">опасные грузы</span>
 			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="./index.html">Главная</a>
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
