--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -20,7 +20,7 @@
 				<div class="nav__links">
 
 
-					<a href="tel:+998555031199" class="nav__phone">
+					<a onclick="window.open('tel:998555031199')" class="nav__phone">
 
 						<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path
@@ -167,11 +167,6 @@
 	</div>
 
 	<script>
-		document.getElementById('.nav__phone').addEventListener('click', function () {
-			setTimeout(() => {
-				window.location.href = 'tel:+998555031199';
-			}, 100); // Небольшая задержка перед переходом
-		});
 		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
 	</script>
 	<script type="module" src="./js/main.min.js"></script>
